force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/OCIInteractionFulfillOrderItem__c.object-meta.xml
<CustomObject>
    <label>OCI Interaction Fulfill Order Item</label>
    <nameField>
        <displayFormat>OCI-FI-{0000}</displayFormat>
        <label>OCIInteractionFulfillOrderItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCI Interaction Fulfill Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>