force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/FromLocation__c.field-meta.xml
<CustomField>
    <fullName>FromLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>OCI Interaction Fulfill Order Items (From Location)</relationshipLabel>
    <relationshipName>OCIIFOIFromLocations</relationshipName>
    <type>Lookup</type>
</CustomField>