force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/FromLocationGroup__c.field-meta.xml
<CustomField>
    <fullName>FromLocationGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Location Group</label>
    <referenceTo>LocationGroup</referenceTo>
    <relationshipLabel>OCII FO From Location Groups</relationshipLabel>
    <relationshipName>OCIIFOIFromLocationGroups</relationshipName>
    <type>Lookup</type>
</CustomField>