force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/FulfillmentOrderItem__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrderItem__c</fullName>
    <label>Fulfillment Order Product</label>
    <referenceTo>FulfillmentOrderLineItem</referenceTo>
    <relationshipLabel>OCI Interaction Fulfill Order Items</relationshipLabel>
    <relationshipName>OCIInteractionFulfillOrderItems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>