force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/IsTranferMoveOrTransferCancel__c.field-meta.xml
<CustomField>
    <fullName>IsTranferMoveOrTransferCancel__c</fullName>
    <formula>(TEXT( Type__c ) == &apos;TRANSFER_MOVE&apos;) || (TEXT( Type__c ) == &apos;TRANSFER_CANCEL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Tranfer Move Or Transfer Cancel</label>
    <type>Checkbox</type>
</CustomField>