force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/Main_Fulfillment_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Main_Fulfillment_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Fulfillment Order Product</label>
    <referenceTo>FulfillmentOrderLineItem</referenceTo>
    <relationshipLabel>OCI Interaction Fulfill Order Items (Main Fulfillment Order Item)</relationshipLabel>
    <relationshipName>OCI_Interaction_Fulfill_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>