force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/OCIInteractionFulfillOrder__c.field-meta.xml
<CustomField>
    <fullName>OCIInteractionFulfillOrder__c</fullName>
    <label>OCI Interaction Fulfill Order</label>
    <referenceTo>OCIInteractionFulfillOrder__c</referenceTo>
    <relationshipLabel>OCI Interaction Fulfill Order Items</relationshipLabel>
    <relationshipName>OCIInteractionFulfillOrderItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>