force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/ToLocation__c.field-meta.xml
<CustomField>
    <fullName>ToLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>OCI Interaction Fulfill Order Items (To Location)</relationshipLabel>
    <relationshipName>OCIIFOIToLocations</relationshipName>
    <type>Lookup</type>
</CustomField>