force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/fields/ToLocationGroup__c.field-meta.xml
<CustomField>
    <fullName>ToLocationGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Location Group</label>
    <referenceTo>LocationGroup</referenceTo>
    <relationshipLabel>OCI Interaction Fulfill Order Items (To Location Group)</relationshipLabel>
    <relationshipName>OCI_Interaction_Fulfill_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>