force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/validationRules/MatchParentStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>MatchParentStatus</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c) &lt;&gt; TEXT(OCIInteractionFulfillOrder__r.Status__c)</errorConditionFormula>
    <errorMessage>Status must match parent</errorMessage>
</ValidationRule>