force-app/main/default/objects/OCIInteractionFulfillOrderItem__c/validationRules/MatchParentType.validationRule-meta.xml
<ValidationRule>
    <fullName>MatchParentType</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Type__c) &lt;&gt;  TEXT(OCIInteractionFulfillOrder__r.Type__c)</errorConditionFormula>
    <errorMessage>Type must match parent</errorMessage>
</ValidationRule>